--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pylint
     - name: Run Pylint
       run: |
-        pylint $(git ls-files '*.py') 
+        pylint $(git ls-files '*.py') --rcfile=.pylintrc
