Fix to project architecture and unit test upload

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,13 @@ name: Python package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - "main"
+      - "develop"  
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - "main"
+      - "develop"  
 
 jobs:
   build:
@@ -38,3 +42,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
