--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 scikit-learn==1.5.1
-numpy==1.24.3
-seaborn=0.13.2
-matplotlib=3.9.2
-pandas=2.2.2
+numpy==1.26.4
+seaborn==0.13.2
+matplotlib==3.8.4
+pandas==2.2.2
+fastapi==0.100.0
+uvicorn==0.22.0
+pytest==7.4.4
+pytest-mock==3.10.0
+pydantic==2.9.1
+threadpoolctl>=3.1.0
